# zksnark

./: Cargo.toml  Dockerfile.scratch
src/: bellman-example.rs  generate_keys.rs  keys.rs  main.rs  prover.rs
